--- a/app/src/main/res/drawable/ic_open.xml
+++ b/app/src/main/res/drawable/ic_open.xml
@@ -1,5 +1,15 @@
-<vector android:autoMirrored="true" android:height="512dp"
-    android:viewportHeight="512" android:viewportWidth="512"
-    android:width="512dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/black" android:pathData="M405.34,405.332H106.66V106.668H240V64H106.66C83.191,64 64,83.197 64,106.668v298.664C64,428.803 83.191,448 106.66,448h298.68c23.469,0 42.66,-19.197 42.66,-42.668V272h-42.66V405.332zM288,64v42.668h87.474L159.999,322.133l29.866,29.866l215.476,-215.47V224H448V64H288z"/>
+<vector android:height="13dp" android:viewportHeight="13.207"
+    android:viewportWidth="13.207" android:width="13dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#00000000"
+        android:pathData="M10.5,7.374v4A1.333,1.333 0,0 1,9.167 12.707L1.833,12.707A1.333,1.333 0,0 1,0.5 11.374L0.5,4.04A1.333,1.333 0,0 1,1.833 2.707h4"
+        android:strokeColor="#000000" android:strokeLineCap="round"
+        android:strokeLineJoin="round" android:strokeWidth="1"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M8.5,0.707h4L12.5,4.707"
+        android:strokeColor="#000000" android:strokeLineCap="round"
+        android:strokeLineJoin="round" android:strokeWidth="1"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M5.167,8.04L12.5,0.707"
+        android:strokeColor="#000000" android:strokeLineCap="round"
+        android:strokeLineJoin="round" android:strokeWidth="1"/>
 </vector>
