--- a/app/src/main/res/layout/bottom_navigation_drawer.xml
+++ b/app/src/main/res/layout/bottom_navigation_drawer.xml
@@ -19,7 +19,7 @@
             android:id="@+id/profile_image"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/tiger"
+            android:src="@drawable/ic_logo"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             tools:ignore="ContentDescription" />
